cm-super (0.3.4-16) UNRELEASED; urgency=medium

  * Use set -e rather than passing -e on the shebang-line.
  * Update standards version to 4.4.1, no changes needed.
  * Bump debhelper from old 9 to 12.
  * Add missing build dependency on dh addon.
  * Refer to specific version of license GPL-2+.
  * Update standards version to 4.5.0, no changes needed.

 -- Debian Janitor <janitor@jelmer.uk>  Mon, 28 Oct 2019 17:26:53 +0000

cm-super (0.3.4-15) unstable; urgency=medium

  * Add me to list of Uploaders.
  * Change source format to "3.0 (quilt)".
  * lintian:
    - W: maintainer-script-should-not-use-dpkg-maintscript-helper
    - P: file-contains-trailing-whitespace
    - P: no-homepage-field
    - P: package-lacks-versioned-build-depends-on-debhelper
    - P: no-dep5-copyright
    - I: out-of-date-standards-version (bumped to 4.4.0, no changes needed)

 -- Hilmar Preusse <hille42@web.de>  Tue, 06 Aug 2019 10:26:40 +0200

cm-super (0.3.4-14) unstable; urgency=medium

  * update VCS and my email

 -- Norbert Preining <norbert@preining.info>  Thu, 28 Feb 2019 23:33:54 +0900

cm-super (0.3.4-13) unstable; urgency=medium

  * remove a forgotten --priority (Closes: #909292)

 -- Norbert Preining <preining@debian.org>  Fri, 21 Sep 2018 17:02:20 +0900

cm-super (0.3.4-12) unstable; urgency=medium

  * remove --priority to the dh_installtex call, not needed since ages
  * bump standards version, no changes necessary
  * VCS fields pointing to Salsa
  * override some Adobe lintian errors (well known ones)

 -- Norbert Preining <preining@debian.org>  Sun, 02 Sep 2018 21:23:55 +0900

cm-super (0.3.4-11) unstable; urgency=medium

  * upload to unstable

 -- Norbert Preining <preining@debian.org>  Mon, 19 Jun 2017 16:41:21 +0900

cm-super (0.3.4-10) experimental; urgency=medium

  * allow for installation without presence of /u/s/d (Closes: #860143)
  * bump dh compat level to 9
  * bump standards version to 3.9.8, no changes necessary
