@@ -1,0 +1,6 @@
+build-stamp
+install-stamp
+install-stamp-cmsuper
+install-stamp-cmsuper-minimal
+install-stamp-cmsuperx11
+cm-super.t1c
